diesel_compile_tests/tests/fail/select_requires_column_from_same_table.rs
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Integer,
        name -> VarChar,
    }
}

table! {
    posts {
        id -> Integer,
        title -> VarChar,
    }
}

fn main() {
    let select_id = users::table.select(posts::id);
}
